--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <h1>I'm a header 1!</h1>
         <title>My awesome web page</title>
     </head>
+<img src="https://octodex.github.com/images/vinyltocat.png">
 
   <body>
     Hello there, awesome person! 
