--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li>utube</li>
     <li>insta</li>
     <li>whatsapp</li>
+  <li><a href="https://github.com">This is a link to GitHub!</a></li>
 </ol>
     Hello there, awesome person! 
   </body>
