--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <h1>I'm a header 1!</h1>
         <title>My awesome web page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 <img src="https://octodex.github.com/images/vinyltocat.png">
 
